@@ -1,3 +1,9 @@
+2005-07-04 Mikhail Khodjaiants
+	Removed the "IBreakpointTarget" interface.
+	- IBreakpointTarget.java
+	* ICDebugTarget.java
+	* CDebugTarget.java
+
 2005-06-29 Mikhail Khodjaiants
 	Bug 41725: I can't set a breakpoint in a function where I used attach source.
 	Bug 45514: Breakpoints made is assembly view do not show in C view.
